openmediavault-rsnapshot (0.5.6) stable; urgency=low

  * updated locale source file
  * added "retain yearly" configuration option"

 -- Julian Kalinowski <julakali@gmail.com>  Thu, 16 Jan 2014 19:58:26 +0100

openmediavault-rsnapshot (0.5.4) stable; urgency=low

  [ Aaron Murray ]
  * add locale file

  [ Julian Kalinowski ]
  * fixes error when a backup interval was disabled (e.g. hourly = 0)
  * add german language file

 -- Julian Kalinowski <julakali@gmail.com>  Sat, 07 Dec 2013 14:00:23 +0100

openmediavault-rsnapshot (0.5.3) stable; urgency=low

  * Added require GroupComboBox.js entry in Jobs.js

 -- Julian Kalinowski <julakali@gmail.com>  Wed, 25 Sep 2013 11:04:33 +0200

openmediavault-rsnapshot (0.5.0) stable; urgency=low

  * Initial release

 -- Julian Kalinowski <julakali@gmail.com>  Sun, 22 Sep 2013 22:53:20 +0200 